--- a/testing_MB/Localization/Localization.xml
+++ b/testing_MB/Localization/Localization.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<Module>
+<Module specificationVersion='2'>
   <ModulePrefs title="String Localization" 
                height="250" 
                author="SAP" 
